project-1/node-todo-cicd/canary-istio/dist-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapp-dest
  namespace: nodejs
spec:
  host: nodejs-svc.nodejs.svc.cluster.local 
  subsets:
    - name: stable
      labels:
        version: stable
    - name: canary
      labels:
        version: canary
