project-1/node-todo-cicd/canary-istio/virtual-svc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp-vs
  namespace: nodejs
spec:
  hosts:
    - myapp.local
  gateways:
    - myapp-gateway
  http:
    - route:
        - destination:
            host: nodejs-svc.nodejs.svc.cluster.local 
            subset: stable
          weight: 90
        - destination:
            host: nodejs-svc.nodejs.svc.cluster.local 
            subset: canary
          weight: 10
